# scimschema

./: .editorconfig  .gitignore  .travis.yml  CHANGELOG.rst  MANIFEST.in  Makefile  README.rst  requirements-python2.nix  requirements-python2.txt  requirements-python3.nix  requirements-python3.txt  requirements.txt  setup.cfg  setup.nix  setup.py
src/scimschema/: __init__.py
src/scimschema/_model/: attribute.py  model.py  schema_response.py  scim_exceptions.py
src/scimschema/core_schemas/: __init__.py
tests/: test_attributes.py  test_model.py  test_scim_response.py  test_scim_schema.py
tests/examples/: __init__.py
tests/extension/: __init__.py
