[metadata]
name = scimschema
version = 0.2.0.dev0
description = A validator for System for Cross-domain Identity Management (SCIM) responses given predefine schemas
long_description = file: README.rst, CHANGELOG.rst
author = Gordon So
author_email = gordonkwso@gmail.com
# author = Asko Soukka
# author_email = asko.soukka@iki.fi
url = https://github.com/datakurre/scimschema
license = MIT
classifiers =
    "Programming Language :: Python :: 2"
    "Programming Language :: Python :: 3"
    "License :: OSI Approved :: MIT License"
    "Operating System :: OS Independent"

[options]
include_package_data = True
setup_requires =
    pytest-runner
install_requires =
    setuptools
tests_require =
    pytest
package_dir =
    = src
packages = find:
zip_safe = False

[options.packages.find]
where =
    src

[bdist_wheel]
universal = 1

[aliases]
test = pytest

[isort]
force_single_line = true
lines_after_imports = 2
not_skip = __init__.py

[pylama]
linters=pycodestyle,pydocstyle,pyflakes,pylint,eradicate
ignore=C0301,C0330,D202,D203,D213,E501,R0205,R0913,R1716,W0511,C0103,D100,D101,D102,D103,D104,D107,C0111,R0902,R0903,W0212,W0613

# C0301 - Enforcing line length when using black makes little sense.
# C0330 - This is a pylint bug and incompatible with black.
#  D202 - Black prefer newlines after a funtion docstring.
#  D203 - Black prefer newlines after a class docstring.
#  D213 - Black prefer newlines after a multiline docstring summary.
#  E501 - Enforcing line length when using black makes little sense.
# R0205 - Do not enforce to support Python 2.7
# R0914 - Do not limit the amount of arguments in this project
# R1716 - Allow complex chained comparison between the operands
# W0511 - Allow TODO

# C0103 - Skip enforcing due to legacy
# D100,D101,D102,D103,D104,D107,C0111 - Skip enforcing due to legacy
# R0902,R0903,W0212,W0613 - Skip enforcing due to legacy

[pylama:**/__init__.py]
ignore=W0611

# W0611 - Enforcing unused imports in module __init__ makes little sense.
